--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -81,7 +81,7 @@ indent_braces_no_struct                  = false    # false/true
 indent_brace_parent                      = false    # false/true
 
 # Whether the 'namespace' body is indented
-indent_namespace                         = false    # false/true
+indent_namespace                         = true    # false/true
 
 # The number of spaces to indent a namespace block
 indent_namespace_level                   = 2        # number
@@ -244,19 +244,19 @@ sp_cpp_lambda_paren                      = ignore   # ignore/add/remove/force
 sp_assign_default                        = add   # ignore/add/remove/force
 
 # Add or remove space before assignment operator '=', '+=', etc. Overrides sp_assign.
-sp_before_assign                         = add   # ignore/add/remove/force
+sp_before_assign                         = ignore   # ignore/add/remove/force
 
 # Add or remove space after assignment operator '=', '+=', etc. Overrides sp_assign.
-sp_after_assign                          = add   # ignore/add/remove/force
+sp_after_assign                          = ignore   # ignore/add/remove/force
 
 # Add or remove space around assignment '=' in enum
-sp_enum_assign                           = add   # ignore/add/remove/force
+sp_enum_assign                           = ignore   # ignore/add/remove/force
 
 # Add or remove space before assignment '=' in enum. Overrides sp_enum_assign.
-sp_enum_before_assign                    = add   # ignore/add/remove/force
+sp_enum_before_assign                    = ignore   # ignore/add/remove/force
 
 # Add or remove space after assignment '=' in enum. Overrides sp_enum_assign.
-sp_enum_after_assign                     = add   # ignore/add/remove/force
+sp_enum_after_assign                     = ignore   # ignore/add/remove/force
 
 # Add or remove space around preprocessor '##' concatenation operator. Default=Add
 sp_pp_concat                             = add      # ignore/add/remove/force
@@ -268,10 +268,10 @@ sp_pp_stringify                          = ignore   # ignore/add/remove/force
 sp_before_pp_stringify                   = ignore   # ignore/add/remove/force
 
 # Add or remove space around boolean operators '&&' and '||'
-sp_bool                                  = add   # ignore/add/remove/force
+sp_bool                                  = ignore   # ignore/add/remove/force
 
 # Add or remove space around compare operator '<', '>', '==', etc
-sp_compare                               = add   # ignore/add/remove/force
+sp_compare                               = ignore   # ignore/add/remove/force
 
 # Add or remove space inside '(' and ')'
 sp_inside_paren                          = ignore   # ignore/add/remove/force
@@ -299,7 +299,7 @@ sp_between_ptr_star                      = remove   # ignore/add/remove/force
 sp_after_ptr_star                        = remove   # ignore/add/remove/force
 
 # Add or remove space after a pointer star '*', if followed by a func proto/def.
-sp_after_ptr_star_func                   = add   # ignore/add/remove/force
+sp_after_ptr_star_func                   = ignore   # ignore/add/remove/force
 
 # Add or remove space after a pointer star '*', if followed by an open paren (function types).
 sp_ptr_star_paren                        = ignore   # ignore/add/remove/force
@@ -539,31 +539,31 @@ sp_macro                                 = ignore   # ignore/add/remove/force
 sp_macro_func                            = ignore   # ignore/add/remove/force
 
 # Add or remove space between 'else' and '{' if on the same line
-sp_else_brace                            = add   # ignore/add/remove/force
+sp_else_brace                            = ignore   # ignore/add/remove/force
 
 # Add or remove space between '}' and 'else' if on the same line
-sp_brace_else                            = add   # ignore/add/remove/force
+sp_brace_else                            = ignore   # ignore/add/remove/force
 
 # Add or remove space between '}' and the name of a typedef on the same line
-sp_brace_typedef                         = add   # ignore/add/remove/force
+sp_brace_typedef                         = ignore   # ignore/add/remove/force
 
 # Add or remove space between 'catch' and '{' if on the same line
-sp_catch_brace                           = add   # ignore/add/remove/force
+sp_catch_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove space between '}' and 'catch' if on the same line
-sp_brace_catch                           = add   # ignore/add/remove/force
+sp_brace_catch                           = ignore   # ignore/add/remove/force
 
 # Add or remove space between 'finally' and '{' if on the same line
-sp_finally_brace                         = add   # ignore/add/remove/force
+sp_finally_brace                         = ignore   # ignore/add/remove/force
 
 # Add or remove space between '}' and 'finally' if on the same line
-sp_brace_finally                         = add   # ignore/add/remove/force
+sp_brace_finally                         = ignore   # ignore/add/remove/force
 
 # Add or remove space between 'try' and '{' if on the same line
-sp_try_brace                             = add   # ignore/add/remove/force
+sp_try_brace                             = ignore   # ignore/add/remove/force
 
 # Add or remove space between get/set and '{' if on the same line
-sp_getset_brace                          = add   # ignore/add/remove/force
+sp_getset_brace                          = ignore   # ignore/add/remove/force
 
 # Add or remove space before the '::' operator
 sp_before_dc                             = ignore   # ignore/add/remove/force
@@ -876,19 +876,19 @@ align_oc_decl_colon                      = false    # false/true
 nl_collapse_empty_body                   = false    # false/true
 
 # Don't split one-line braced assignments - 'foo_t f = { 1, 2 };'
-nl_assign_leave_one_liners               = true    # false/true
+nl_assign_leave_one_liners               = false    # false/true
 
 # Don't split one-line braced statements inside a class xx { } body
-nl_class_leave_one_liners                = true    # false/true
+nl_class_leave_one_liners                = false    # false/true
 
 # Don't split one-line enums: 'enum foo { BAR = 15 };'
-nl_enum_leave_one_liners                 = true    # false/true
+nl_enum_leave_one_liners                 = false    # false/true
 
 # Don't split one-line get or set functions
-nl_getset_leave_one_liners               = true    # false/true
+nl_getset_leave_one_liners               = false    # false/true
 
 # Don't split one-line function definitions - 'int foo() { return 0; }'
-nl_func_leave_one_liners                 = true    # false/true
+nl_func_leave_one_liners                 = false    # false/true
 
 # Don't split one-line if/else statements - 'if(a) b++;'
 nl_if_leave_one_liners                   = false    # false/true
@@ -903,7 +903,7 @@ nl_start_of_file                         = ignore   # ignore/add/remove/force
 nl_start_of_file_min                     = 0        # number
 
 # Add or remove newline at the end of the file
-nl_end_of_file                           = add   # ignore/add/remove/force
+nl_end_of_file                           = ignore   # ignore/add/remove/force
 
 # The number of newlines at the end of the file (only used if nl_end_of_file is 'add' or 'force')
 nl_end_of_file_min                       = 0        # number
@@ -947,16 +947,16 @@ nl_var_def_blk_in                        = 0        # number
 
 # Add or remove newline between a function call's ')' and '{', as in:
 # list_for_each(item, &list) { }
-nl_fcall_brace                           = add   # ignore/add/remove/force
+nl_fcall_brace                           = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'enum' and '{'
-nl_enum_brace                            = ignore   # ignore/add/remove/force
+nl_enum_brace                            = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'struct and '{'
-nl_struct_brace                          = add   # ignore/add/remove/force
+nl_struct_brace                          = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'union' and '{'
-nl_union_brace                           = add   # ignore/add/remove/force
+nl_union_brace                           = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'if' and '{'
 nl_if_brace                              = remove   # ignore/add/remove/force
@@ -1049,7 +1049,7 @@ nl_namespace_brace                       = remove   # ignore/add/remove/force
 nl_template_class                        = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'class' and '{'
-nl_class_brace                           = add   # ignore/add/remove/force
+nl_class_brace                           = remove   # ignore/add/remove/force
 
 # Add or remove newline after each ',' in the constructor member initialization
 nl_class_init_args                       = ignore   # ignore/add/remove/force
@@ -1115,7 +1115,7 @@ nl_func_def_empty                        = ignore   # ignore/add/remove/force
 nl_oc_msg_args                           = false    # false/true
 
 # Add or remove newline between function signature and '{'
-nl_fdef_brace                            = add   # ignore/add/remove/force
+nl_fdef_brace                            = remove   # ignore/add/remove/force
 
 # Add or remove a newline between the return keyword and return expression.
 nl_return_expr                           = ignore   # ignore/add/remove/force
